# rust-cockroach

./: Cargo.toml  README.md
docker/cassandra/: cassandra_cluster.yml
docker/cockroach/: cockroach_cluster.yml  haproxy.cfg
minio-chart/: Chart.yaml  values.yaml
minio-chart/templates/: headless-service.yaml  loadbalancer-service.yaml  statefulset.yaml
src/: main.rs  timer.rs
