[package]
name = "cassandra_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.1.4", features = ["postgres", "128-column-tables", "extras" ] }
openssl = "0.10.66"
postgres = { version = "0.19.7", features = ["with-uuid-1"]}
postgres-openssl = "0.5.0"
rand = "0.8.5"
uuid = {version = "1.1.2", features = ["v4"]}

